--- a/includes/ext/rapidology_rapidbar/css/style.css
+++ b/includes/ext/rapidology_rapidbar/css/style.css
@@ -155,6 +155,7 @@
     cursor: pointer;
     border: none;
     font-size:14px !important;
+    line-height: 14px !important;
     height: 26px !important;
 
 }
@@ -433,6 +434,7 @@ div[class*="rad_rapidology_border_"]{border-width: 5px !important;}
     .rad_rapidology_rapidbar_form_content form {
         overflow: hidden !important;
         max-width: 100% !important;
+        min-width: 200px !important;
         display: -webkit-box;
         display: -webkit-flex;
         display: -ms-flexbox;
@@ -460,6 +462,8 @@ div[class*="rad_rapidology_border_"]{border-width: 5px !important;}
         padding: 0 !important;
         float: none !important;
     }
+
+
     .rad_rapidology_rapidbar_form .rad_rapidology_submit_subscription, .rad_rapidology_rapidbar_form .rad_rapidology_redirect_page, .rad_rapidology_preview_rapidbar .rad_rapidology_submit_subscription, .rad_rapidology_preview_rapidbar .rad_rapidology_redirect_page{
         width:190px !important;
         padding: 0 !important;
@@ -469,6 +473,18 @@ div[class*="rad_rapidology_border_"]{border-width: 5px !important;}
         float: none !important;
     }
 
+}
+
+@media screen and (max-width: 640px){
+    .rad_rapidology_rapidbar .rad_rapidology_form_container button{
+        width: 190px !important;
+        min-width: 190px !important;
+        padding: 0 !important;
+        margin-left:0 !important;
+        margin-top: 0 !important;
+        margin-bottom:10px !important;
+        float: none !important;
+    }
 }
 
 .rad_rapidology_rapidbar_form .rad_rapidology_form_text p.rapidbar_form_responsive, .rad_rapidology_preview_rapidbar .rad_rapidology_form_text p.rapidbar_form_responsive{
